--- a/style/style.css
+++ b/style/style.css
@@ -216,6 +216,10 @@
     padding-bottom: 1rem;
 }
 
+.custom-course {
+    padding-bottom: 2rem;
+}
+
 .custom-item {
     font-size: 1.125rem;
     line-height: 1.4;
